--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Robot Parts Co.</title>
+  <title>Robot Parts Co. · Every part to conquer the world · Robot Mega City 1, RoboCountry211</title>
+  <meta name="description" content="A mega conlomerate corporation selling and servicing all totalitarian robots">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
   <header>
-    <h1><img src="images/logo.svg" alt=""></h1>
+    <h1><img src="images/robot-parts-co.svg" alt="Robot Parts Co."></h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html">Products</a></li>
-        <li><a href="page3.html">Contact</a></li>
+        <li><a href="robot-parts.html">Products</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
