--- a/cantact.html
+++ b/cantact.html
@@ -20,15 +20,15 @@
     </nav>
   </header>
 
-  <main>
+  <main itemscope itemtype="https://schema.org/Corporation">
     <h1>Contact</h1>
 
-    <strong>Robot Parts Co.</strong>
+    <strong itemprop="name">Robot Parts Co.</strong>
 
-    <address>
-      <br>1234 Robot Lane
-      <br>Robot Mega City 1, RoboStateB, RoboCountry211
-      <br>11001010100101001
+    <address itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+      <br><span itemprop="streetaddress">1234 Robot Lane</span>
+      <br><span itemprop="addressLocality">Robot Mega City 1, RoboStateB, RoboCountry211</span>
+      <br><span itemprop="postalCode">11001010100101001</span>
     </address>
 
     <a href="mailto:parts@robotparts.co">parts@robotparts.co</a>
