Update final part

--- a/cantact.html
+++ b/cantact.html
@@ -31,7 +31,7 @@
       <br><span itemprop="postalCode">11001010100101001</span>
     </address>
 
-    <a href="mailto:parts@robotparts.co">parts@robotparts.co</a>
+    <a itemprop="email" href="mailto:parts@robotparts.co">parts@robotparts.co</a>
   </main>
 
   <footer>
