Add changes of forgotten alt

--- a/cantact.html
+++ b/cantact.html
@@ -10,12 +10,12 @@
 <body>
 
   <header>
-    <strong><img src="images/logo.svg" alt=""></strong>
+    <strong><img src="images/logo.svg" alt="Robot Parts"></strong>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html">Products</a></li>
-        <li><a href="page3.html">Contact</a></li>
+        <li><a href="robot-parts.html">Robot Parts</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
