--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="robot-parts.html">Products</a></li>
+        <li><a href="robot-parts.html">Robot Parts</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
