--- a/robot-parts.html
+++ b/robot-parts.html
@@ -10,11 +10,11 @@
 <body>
 
   <header>
-    <h1><img src="images/robot-parts-co.svg" alt=""></h1>
+    <h1><img src="images/robot-parts-co.svg" alt="Robot Parts Co."></h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="robot-parts.html">Products</a></li>
+        <li><a href="robot-parts.html">Robot Parts</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
